[package]
name = "trusty"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
async-trait = "0.1.73"
jsonwebtoken = "8.3.0"
log = "0.4.20"
mongodb = "2.7.0"
futures = "0.3.28"
ulid = "1.1.0"
env_logger = "0.10.0"
validator = "0.16.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
reqwest = "0.11.22"
